appId: ${APP_ID}
tags: [smoke]
---
- runFlow: ../helpers/to-tab-bar.yaml
- tapOn:
    id: home-open-details
- assertVisible:
    id: details-id
- assertVisible:
    text: '42'
- runFlow: ../helpers/go-back.yaml
- assertVisible:
    id: home-screen
