appId: ${APP_ID}
tags: [smoke]
---
- runFlow: ../helpers/to-tab-bar.yaml
- tapOn:
    id: tab-settings
- assertVisible:
    id: settings-title
- assertVisible:
    text: 'Hello, Maestro from (Swift|Kotlin)'
- assertVisible:
    text: 'build-stamp:(development|production)-.*'
- tapOn:
    id: settings-lang-es
- assertVisible:
    text: 'Ajustes'
- tapOn:
    id: settings-lang-en
- tapOn:
    id: settings-theme-dark
- tapOn:
    id: settings-theme-system
